--- a/www/index.html
+++ b/www/index.html
@@ -74,8 +74,8 @@
     <li>
         <div class="divider"></div>
     </li>
-    <li>
-        <a class="red-text waves-effect" href="http://192.168.120.174:8080/logout">
+    <li id="log-out">
+        <a class="red-text waves-effect">
             <i class="fas fa-sign-out-alt red-text"></i>Đăng Xuất
         </a>
     </li>
