--- a/www/login.html
+++ b/www/login.html
@@ -15,6 +15,9 @@
 <body>
 
 <div class="container">
+    <!--<button class="btn btn-primary">-->
+        <!--<span class="glyphicon glyphicon-th"></span>-->
+    <!--</button>-->
     <img src="img/travo.png" width="100%">
     <div class="row">
         <div class="input-field col s12">
