Adding navigation, profile page Adding navbar on top of location detail

--- a/www/login.html
+++ b/www/login.html
@@ -22,20 +22,20 @@
     <div class="row">
         <div class="input-field col s12">
             <input id="username" type="text" name="username">
-            <label for="username">Username</label>
+            <label for="username">Tài Khoản</label>
         </div>
     </div>
     <div class="row">
         <div class="input-field col s12">
             <input id="password" type="password" name="password">
-            <label for="password">Password</label>
+            <label for="password">Mật Khẩu</label>
         </div>
     </div>
     <div id="login-failed" class="right-align"></div>
-    <a id="signin-button" class="waves-effect waves-light btn btn-large">Sign In</a>
+    <a id="signin-button" class="waves-effect waves-light btn btn-large">Đăng Nhập</a>
     <div id="signup-button">
         <div class="right-align">
-            <a href="signup.html">Sign Up</a>
+            <a href="signup.html">Đăng Ký</a>
         </div>
     </div>
 </div>
