--- a/www/index.html
+++ b/www/index.html
@@ -62,13 +62,8 @@
         </a>
     </li>
     <li>
-        <a href="#!">
+        <a href="favorite.html">
             <i class="fas fa-star"></i>Danh Sách Yêu Thích
-        </a>
-    </li>
-    <li>
-        <a href="#!">
-            <i class="fas fa-book"></i>Nhật Ký
         </a>
     </li>
     <li>
